--- a/styles/style.css
+++ b/styles/style.css
@@ -12,6 +12,8 @@ html {
     background-color: black;
 }
 
+/*--------------------max-width: 328px--------------------*/
+
 @media (max-width: 328px) {
 
     #app {
@@ -486,6 +488,7 @@ html {
         width: 166px;
         position: fixed;
         position: relative;
+        z-index: 2;
         top: 60px;
         left: 20%;
         border: 4px solid red;
@@ -526,6 +529,7 @@ html {
         width: 166px;
         position: fixed;
         position: relative;
+        z-index: 2;
         top: 60px;
         left: 20%;
         background-color: #ffff89;
@@ -555,6 +559,8 @@ html {
     }
 
 }
+
+/*--------------------min-width: 329px--------------------*/
 
 @media (min-width: 329px) {
 
@@ -617,6 +623,7 @@ html {
         width: 166px;
         position: fixed;
         position: relative;
+        z-index: 2;
         top: 60px;
         left: 20%;
         border: 4px solid red;
@@ -632,6 +639,7 @@ html {
         width: 166px;
         position: fixed;
         position: relative;
+        z-index: 2;
         top: 60px;
         left: 20%;
         background-color: #ffff89;
@@ -1132,7 +1140,9 @@ html {
 
 }
 
-@media (min-width: 600px) {
+/*--------------------min-width: 568px--------------------*/
+
+@media (min-width: 568px) {
 
     #app {
         min-height: 100%;
@@ -1209,7 +1219,7 @@ html {
         align-items: center;
         position: fixed;
         top: 5px;
-        left: 93.6%;
+        left: 93%;
         width: 36px;
         z-index: 2;
         height: 50px;
@@ -1233,7 +1243,7 @@ html {
 
     .black-btn {
         position: fixed;
-        left: 93.6%;
+        left: 93%;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -1269,6 +1279,7 @@ html {
         position: fixed;
         position: relative;
         top: 10px;
+        z-index: 2;
         left: 150px;
         background-color: #ffff89;
         border: 4px solid red;
@@ -1283,6 +1294,7 @@ html {
         width: 166px;
         position: fixed;
         position: relative;
+        z-index: 2;
         top: 10px;
         left: 150px;
         border: 4px solid red;
